corrected footer spacing

--- a/paytm.css
+++ b/paytm.css
@@ -251,7 +251,7 @@
 .footer-text{
     font-size: 20px;
     font-weight: bold;
-    padding-left: 350px;
+    padding-left: 250px;
 }
 .footer-left{
     width: 50%;
